--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.content{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height:250px
+}
