--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -2,9 +2,99 @@
 @tailwind components;
 @tailwind utilities;
 
-.content{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height:250px
+@font-face {
+    font-family: Cedarville Cursive;
+    src: url(../public/CedarvilleCursive-Regular.ttf);
 }
+
+.home{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+    
+}
+.name{
+    font-family: Cedarville Cursive ;
+}
+
+.profiles{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	
+}
+.skills{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	
+}
+.projects{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	
+}
+.contact{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+	
+}
+.intro{
+	background: linear-gradient(-45deg,#0a192f,#000409 ,#032d6f , #042e71);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.focus-in-contract-bck {
+	-webkit-animation: focus-in-contract-bck 5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: focus-in-contract-bck 5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+            font-family: Cedarville Cursive ;
+}
+@-webkit-keyframes focus-in-contract-bck {
+    0% {
+      letter-spacing: 1em;
+      -webkit-transform: translateZ(300px);
+              transform: translateZ(300px);
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateZ(12px);
+              transform: translateZ(12px);
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
+  @keyframes focus-in-contract-bck {
+    0% {
+      letter-spacing: 1em;
+      -webkit-transform: translateZ(300px);
+              transform: translateZ(300px);
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateZ(12px);
+              transform: translateZ(12px);
+      -webkit-filter: blur(0);
+              filter: blur(0);
+      opacity: 1;
+    }
+  }
